[project]
name = "lmdiag"
version = "0.4.0"
description = "Diagnostic Plots for Lineare Regression Models. Similar to plot.lm in R."
keywords = [
    "lm",
    "lineare",
    "regression",
    "diagnostics",
    "plot",
    "chart",
    "matplotlib",
]
readme = "README.md"
authors = [{ name = "dynobo", email = "dynobo@mailbox.org" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["matplotlib", "numpy", "scipy", "statsmodels"]
optional-dependencies = { dev = [
    "build",
    "linearmodels",
    "mypy",
    "notebook",
    "pre-commit",
    "pytest",
    "ruff",
    "scikit-learn",
] }

license = { text = "MIT" }
requires-python = ">=3.9"

[project.urls]
Homepage = "http://github.com/dynobo/lmdiag"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 61.0"]

[tool.mypy]
files = ["lmdiag/**/*.py", "tests/**/*.py"]
exclude = ["build/"]
follow_imports = "skip"
ignore_missing_imports = true
# ONHOLD: Remove cache_dir once https://github.com/python/mypy/issues/17396 is fixed
cache_dir = "/dev/null"

[tool.ruff]
target-version = "py39"
line-length = 88
exclude = [".venv", "build"]

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle
    "I",    # Isort
    "D",    # pydocstyle
    "W",    # warning
    "UP",   # pyupgrad
    "N",    # pep8-naming
    "C90",  # mccabe
    "TRY",  # tryceratops (exception handling)
    "ANN",  # flake8-annotations
    "S",    # flake8-bandits
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "T20",  # flake8-print
    "PYI",  # flake8-pyi
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "G",    # flake8-logging-format
    "PL",   # pylint
    "RUF",  # meta rules (unused noqa)
    "PL",   # meta rules (unused noqa)
    "PERF", # perflint
]

ignore = [
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D107",    # Missing docstring in __init__
    "D203",    # One black line before class
    "D213",    # Multi line summary second line
    "ANN101",  # Missing type annotation for `self` in method
    "ANN401",  # Dynamically typed expression Any
    "TRY003",  # Avoid specifying long messages outside the exception class
    "ISC001",  # Rule conflicts with ruff's formatter
    "RET504",  # Unnecessary assignment before return statement
    "S101",    # Use of assert detected
    "N806",    # Variable in function should be lowercase
    "PLR0913", # Too many arguments in function definition
]

[tool.ruff.lint.pydocstyle]
convention = "google"
